<resources>
    <string name="app_name">Takhfifat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Takhfifat</string>
    <string name="nav_header_subtitle">Make Every Deal The Best Deal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_settings">Settings</string>
    <string name="discount_image">Discount Image</string>
    <string name="placeholder">Placeholder</string>
    <string name="api_address">http://takhfifat.parsa2820.ir:5086/api/</string>
    <string name="discount_code_attribute">Code:</string>
    <string name="discount_end_date_attribute">End Date:</string>
    <string name="discount_category_attribute">Category:</string>
    <string name="copy_code">Copy Code</string>
    <string name="region">Region</string>
</resources>